# precogparty

./: .gitignore  Anchor.toml  README.md  dev-wallet-2.json  netlify.toml  package-lock.json  package.json  scratch.rs  tsconfig.json
app/: .env  config.ts  next.config.js  package-lock.json  package.json  syrup.ts  tailwind.config.js  tsconfig.json
app/.storybook/: main.js
app/components/: TransactButton.stories.tsx  TransactButton.tsx
app/hooks/: useAirdrop.tsx  useConfirmationAlert.tsx  useProgram.ts
app/pages/: _app.page.tsx  home.page.tsx  index.page.tsx  providers.tsx  tokenAccountQuery.ts  useAirdrop.tsx
app/utils/: BNutils.test.ts  BNutils.ts  getATAandCreateIxIfNeeded.ts  interpolateOddsColors.ts  orderMath.ts  takeOrdersHelper.ts
programs/a/: Cargo.toml
programs/engineless-orderbook/: Cargo.toml
programs/precog/: Cargo.toml
programs/precog/src/: lib.rs
programs/precog/src/unorderded-list/: data.rs  error.rs  lib.rs
programs/syrup/: Cargo.toml
programs/syrup/src/: data.rs  error.rs  instructions.rs  lib.rs  transfer.rs  user.rs  user_account.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-FBAE7z93Cq9ddyohYAykG35pbCxiGfjL3qNLzjZ4Zo1E.tar.bz2  snapshot-200-2DFzKan9bFdTNaquaK7JJ1qFDsrXy6yJZL4HzTeSimKJ.tar.bz2  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/: 0.1  100.0  125.2  185.4  200.3  228.5
tests/: a.ts  orderMath.ts  orderbook.ts  precog.ts  syrup-internals.ts  syrup-lengthy-tests.ts  syrup-lengthy.ts  syrup-test.ts  syrup.ts  takeOrdersHelperTests.ts
util/: syrup.ts
(+116 files in other folders)
